<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        style="@android:style/Widget.Holo.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:background="@drawable/baking"
        android:clipToPadding="false"
        android:fillViewport="false"
        android:isScrollContainer="false"
        android:scrollIndicators="top|bottom"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbarStyle="insideInset">

        <TextView
            android:id="@+id/ingredients_view"
            style="@style/recipe_text"
            android:layout_width="160dp"
            android:layout_height="150dp"
            android:layout_gravity="right"
            android:paddingRight="14dp"/>

    </ScrollView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/steps_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>