...
    android:layout_height="match_parent"
    android:background="@drawable/bak1ng"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentRight="true" />

    <ImageView
        android:id="@+id/thumbnail"
...
